--- a/index.html
+++ b/index.html
@@ -1,40 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Github Finder</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Github Finder </title>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-    <h1 class="title"> Github Finder </h1>
+  <body>
+    <h1 class="title">Github Finder</h1>
     <div class="input_user">
-        <label for="user"> Nome de usuario </label>
-        <input type="text" name="user" id="user">
+      <label for="user"> Nome de usuario </label>
+      <input type="text" name="user" id="user" />
 
-        <button type="submit" onclick="Busca()"> Enviar </button>
+      <button type="submit" onclick="Busca()">Enviar</button>
     </div>
 
-    <div class="div_user block">
+    <div class="informations">
+      <div class="div_user block">
         <h2 class="name"></h2>
-        <img src="" alt="" class="avatar">
+        <img src="" alt="" class="avatar" />
         <span class="bio"></span>
         <div class="pop">
-            <span class="followers"> </span>
-            <span class="following"> </span>
+          <span class="followers"> </span>
+          <span class="following"> </span>
         </div>
-    </div>
-
-    <div class="div_repos block">
-        <h3> Repositorios do usuário </h3>
+      </div>
+      <div class="div_repos block">
         <!-- <div class="repos"> -->
-
         <!-- </div> -->
+      </div>
     </div>
 
-    <script src="script.js"></script>
-</body>
+    <footer>
+      <a
+        target="_blank"
+        href="https://icons8.com/icon/QNAS07SErhhL/multiple-stars"
+        >Multiple Stars</a
+      >
+      <a target="_blank" href="https://icons8.com">Icons8</a>
+      <a target="_blank" href="https://icons8.com/icon/aKuNMZSCM4WV/arrows-fork"
+        >Arrows Fork</a
+      >
+      <a target="_blank" href="https://icons8.com">Icons8</a>
 
+      <a
+        target="_blank"
+        href="https://icons8.com/icon/tSKyyMXYaNRe/visualizar-arquivo"
+        >Visualizar arquivo</a
+      >
+      icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
