--- a/index.html
+++ b/index.html
@@ -9,12 +9,27 @@
 
   <body>
     <h1 class="title">Github Finder</h1>
-    <div class="input_user">
+    <form onsubmit="starts()" class="input_user">
       <label for="user"> Nome de usuario </label>
       <input type="text" name="user" id="user" />
 
-      <button type="submit" onclick="Busca()">Enviar</button>
-    </div>
+      <button type="submit">Enviar</button>
+
+      <div class="imgSearch">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="168"
+          height="168"
+          fill="currentColor"
+          class="bi bi-search"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+          />
+        </svg>
+      </div>
+    </form>
 
     <div class="informations">
       <div class="div_user block">
@@ -33,23 +48,41 @@
     </div>
 
     <footer>
-      <a
-        target="_blank"
-        href="https://icons8.com/icon/QNAS07SErhhL/multiple-stars"
-        >Multiple Stars</a
-      >
-      <a target="_blank" href="https://icons8.com">Icons8</a>
-      <a target="_blank" href="https://icons8.com/icon/aKuNMZSCM4WV/arrows-fork"
-        >Arrows Fork</a
-      >
-      <a target="_blank" href="https://icons8.com">Icons8</a>
-
-      <a
-        target="_blank"
-        href="https://icons8.com/icon/tSKyyMXYaNRe/visualizar-arquivo"
-        >Visualizar arquivo</a
-      >
-      icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+      <span>
+        Icones disponiveis em
+        <a target="_blank" href="https://icons8.com">Icons8</a>
+      </span>
+      <div>
+        <a
+          target="_blank"
+          href="https://icons8.com/icon/QNAS07SErhhL/multiple-stars"
+        >
+          <img
+            width="18"
+            height="18"
+            src="./img/icons8-multiple-stars-48.png"
+            alt="multiple-stars"
+          />
+        </a>
+        <a
+          target="_blank"
+          href="https://icons8.com/icon/aKuNMZSCM4WV/arrows-fork"
+          ><img
+            width="18"
+            height="18"
+            src="./img/icons8-arrows-fork-48.png"
+            alt="arrows-fork"
+        /></a>
+        <a
+          target="_blank"
+          href="https://icons8.com/icon/tSKyyMXYaNRe/visualizar-arquivo"
+          ><img
+            width="18"
+            height="18"
+            src="./img/icons8-visualizar-arquivo-64.png"
+            alt="views"
+        /></a>
+      </div>
     </footer>
     <script src="script.js"></script>
   </body>
