--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <label for="user"> Nome de usuario </label>
       <input type="text" name="user" id="user" />
 
-      <button type="submit">Enviar</button>
+      <button type="submit">Buscar</button>
 
       <div class="imgSearch">
         <svg
@@ -42,8 +42,6 @@
         </div>
       </div>
       <div class="div_repos block">
-        <!-- <div class="repos"> -->
-        <!-- </div> -->
       </div>
     </div>
 
@@ -53,6 +51,16 @@
         <a target="_blank" href="https://icons8.com">Icons8</a>
       </span>
       <div>
+        <a
+          target="_blank"
+          href="https://icons8.com/icon/7867/link"
+          ><img
+            width="18"
+            height="18"
+            src="./img/icons8-link-50.png"
+            alt="view_link"
+        /></a>
+
         <a
           target="_blank"
           href="https://icons8.com/icon/QNAS07SErhhL/multiple-stars"
@@ -73,13 +81,11 @@
             src="./img/icons8-arrows-fork-48.png"
             alt="arrows-fork"
         /></a>
-        <a
-          target="_blank"
-          href="https://icons8.com/icon/tSKyyMXYaNRe/visualizar-arquivo"
+        <a target="_blank" href="https://icons8.com/icon/986/vis%C3%ADvel"
           ><img
             width="18"
             height="18"
-            src="./img/icons8-visualizar-arquivo-64.png"
+            src="./img/icons8-visível-50.png"
             alt="views"
         /></a>
       </div>
