Pequenas alterações no readme e correção de bug

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <span class="bio"></span>
         <div class="pop">
           <img
+            id="icon-followers"
             width="20"
             height="20"
             src="./img/icons8-grupo-de-usuários-90.png "
